<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Cheep Care</string>
    <string name="facebook_app_id" translatable="false">471487329942684</string>
    <string name="label_copywrite">Copyright © 2018 &cheep;</string>
    <string name="hint_email">Email ID (optional)</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_signup">Create Password for CHEEP</string>
    <string name="label_signin">Sign In</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_signin_with">Or Sign Up with</string>
    <string name="label_dont_have_ac_signup">"Don't have an account?"</string>
    <string name="label_signup">Sign Up</string>
    <string name="label_add_photo">Add Photo</string>
    <string name="task_change_address">task_change_address</string>
    <string name="sub_cheep_care">. Subscribed Under Cheep Care</string>
    <string name="sub_cheep_premium">. Subscribed Under Cheep Premium</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="font_normal">ProximaNovaRegular.otf</string>
    <string name="font_bold">ProximaNovaBold.otf</string>
    <string name="font_light">ProximaNovaLight.otf</string>
    <string name="font_semi_bold">proximanovasemiboldwebfont.ttf</string>
    <string name="label_home">Home</string>
    <string name="label_favourites">Favourites</string>
    <string name="label_favourites_side_menu">Favourite PRO\'s</string>
    <string name="label_share_with_friend">Refer</string>
    <string name="label_help">Contact Us</string>
    <string name="label_faq">FAQ</string>
    <string name="label_rate_this_app">Rate Cheep Care</string>
    <string name="label_terms1">T&amp;C Apply</string>
    <string name="label_terms">T&amp;C</string>
    <string name="hyphen">-</string>
    <string name="label_terms_title"><![CDATA[T\'S & C\'S]]></string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_logout">Logout</string>
    <string name="hint_username">Username</string>
    <string name="hint_mobile_number_login">Please enter your mobile number</string>
    <string name="hint_mobile_number">Enter your mobile number</string>
    <string name="hint_search_placeholder">Hey %1$s, what are you looking for today?</string>
    <string name="label_signup_and_relax">Sign up now &amp; relax</string>
    <string name="label_sign_agreement">By signing up, you agree to our T\'s &amp; C\'s</string>
    <string name="dummy_name">Mohan Kumar</string>
    <string name="label_select_language">Select Language</string>
    <string name="label_english">English</string>
    <string name="label_hindi">Hindi</string>
    <string name="tab_home">Home</string>
    <string name="tab_my_task">My Services</string>
    <string name="tab_me">Me</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_emergency">Emergency</string>
    <string name="label_plumber">Plumber</string>
    <string name="dummy_chat" translatable="false">Lorem Ipsum dollar sit Lorem Ipsum dollar sitLorem Ipsum dollar sit Lorem Ipsum dollar sit amet simply dummy text for printing various values</string>
    <string name="dummy_location">Ahmedabad</string>
    <string name="label_select_location">Select Location</string>
    <string name="label_auto_select_location">Detect my current location</string>
    <string name="transition_text_search">transition_text_search</string>
    <string name="transition_image_view">transition_image_view</string>
    <string name="transition_location">transition_location</string>
    <string name="label_sent_otp">Did your phone just beep? That\’s us! Enter the code you\'ve just received and get ready to put your feet up.</string>
    <string name="label_enter_code_here">Enter Code Here</string>
    <string name="label_send_otp_again">"Not received the code? Click here!"</string>
    <string name="label_chat">Chat</string>
    <string name="label_can_wait">Can Wait</string>
    <string name="label_my_task">My Services</string>
    <string name="label_takleef_bata_ke_nahin_aati">Takleef bata ke nahin aati!</string>
    <string name="label_out_of_office_hours_info">We understand that emergencies can happen anytime and that is why we offer an \'Emergency Service\' during late hours. This will cost you only ₹%3s. Thank you</string>
    <string name="label_upcoming_tasks">Upcoming</string>
    <string name="label_past_tasks">Past</string>
    <string name="service_specification">Service Specification</string>
    <string name="rate_card_repair">Repairs</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="rate_card_electrician">Electrician</string>
    <string name="service_selection">Service Selection</string>
    <string name="rate_card_painter">Painter</string>
    <string name="rate_card_application_repair">Application Repair</string>
    <string name="rate_card_tech_repair">Tech Repair</string>
    <string name="label_reschedule">Reschedule</string>
    <string name="text_cheep_rate_card_categories"> Rate Card for Service Categories</string>
    <string name="rate_card_plumber">Plumber</string>
    <string name="cheep_rate_card_info">Wondering how much a service can cost you?</string>
    <string name="rate_card_pest_control">Pest Control</string>
    <string name="cheep_rate_card_info1">Our aim is to provide the best services at the most nominal rates.Depending on the services at hand,we might have some additional charges.You can easily aceess the rate card by tapping  on the services listed below</string>
    <string name="rupee_symbol_x_space">₹ %1$s</string>
    <string name="rupee_symbol_x">₹%1$s</string>
    <string name="dummy_email">mohankumar@gmail.com</string>
    <string name="label_phone_no">Phone Number</string>
    <string name="a_cheep_care_pro_now">a Cheep Care PRO now</string>
    <string name="book_pay"><![CDATA[Book & Pay]]></string>
    <string name="label_phone_no_value">7207002829</string>
    <string name="label_add_contact">Add contact</string>
    <string name="label_emergency_info">Please add upto 3 emergency contacts who we will reach out to when you press the alert button on our app</string>
    <string name="label_emergency_contacts">Emergency contact</string>
    <string name="label_manage_address">Address</string>
    <string name="label_manages_address">Manage Address</string>
    <string name="label_view_more">View more</string>
    <string name="label_view_less">View less</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_notification">Notifications</string>
    <string name="label_update">Update</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_current_password">Current Password</string>
    <string name="ok_got_it">Ok,Got It</string>
    <string-array name="choose_image_options">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string-array name="choose_image_options1">
        <item>Photo</item>
        <item>Name</item>
        <item>Email Id</item>
    </string-array>
    <string name="my_services">My Services</string>
    <string name="view_service">View Service</string>
    <string name="label_address_subscribed">subscribed address</string>
    <string name="label_submit">Submit</string>
    <string name="start_time">19:00:00</string>
    <string name="end_time">10:00:00</string>
    <string name="out_of_office">Out-of-Office Hours Fee</string>
    <string name="out_of_off_info">Service booked outside 1000 hrs - 1900 hrs</string>
    <string name="test">TV Repair</string>
    <string name="free">FREE</string>
    <string name="urgent_booking_info">Service booked within 3 hrs</string>
    <string name="gotcha">Gotcha!</string>
    <string name="dummy_long_desc">"Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham."</string>
    <string name="label_cancel_task_dont_need">I am not available at the scheduled time.</string>
    <string name="label_cancel_something_else_came_up">I have a problem with the selected PRO.</string>
    <string name="label_cancel_problem_service_provider">I accidentally booked the task.</string>
    <string name="label_cancel_other_reason">None of the reasons above? Please enter details in the box below.</string>
    <string name="label_crop_image">Crop</string>
    <string name="label_reschedule_inform">You task has been rescheduled.</string>
    <string name="label_Ok">@android:string/ok</string>
    <string name="label_Ok_small" tools:ignore="Typos">Ok</string>
    <string name="label_write_a_review">Please share with other users what you think of %1$s!</string>
    <string name="label_rate">Rate</string>
    <string name="label_call">Call</string>
    <string name="label_alert_msg">Is there an emergency?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_we_love_talking_msg">We would love to hear from you. Please get in touch.</string>
    <string name="label_when">When</string>
    <string name="label_where">Where</string>
    <string name="label_post_it">Post your task to the PROs around you</string>
    <string name="label_x_jobs">%1$s Jobs</string>
    <string name="label_x_task">%1$s Task</string>
    <string name="label_x_tasks">%1$s Tasks</string>
    <string name="label_verified">verified</string>
    <string name="label_pending">Pending</string>
    <string name="label_x_reviews">%1$s reviews</string>
    <string name="label_x_review">%1$s review</string>
    <string name="label_x_comments">%1$s Comments</string>
    <string name="label_no_comments_yet">Add a comment</string>
    <string name="label_x_comment">%1$s Comment</string>
    <string name="label_comments">Comment</string>
    <string name="label_cant_find_answer">Can\'t find your answer here?</string>
    <string name="label_check_our_forum">Check out our forum</string>
    <string name="label_or">Or</string>
    <string name="label_send">Send</string>
    <string name="label_booked">Booked</string>
    <string name="label_task">Task</string>
    <string name="label_task_status">Task status</string>
    <string name="label_view">View</string>
    <string name="label_complete_job_confirm">%1$s has marked the task complete.\nPlease confirm.</string>
    <string name="label_summary">Summary</string>
    <string name="hint_start_typing_location">Start typing a location&#8230;</string>
    <string name="label_your_task_is_posted">Your task is posted!</string>
    <string name="desc_task_creation_acknowledgement">Hi %1$s, thank you for posting the task. Soon you will receive multiple quotes from verified and insured PROs around you.</string>
</resources>