<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_translucent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarWhite">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.cheep.custom_view.CFTextViewSemiBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:drawablePadding="@dimen/scale_5dp"
                    android:gravity="center"
                    android:lines="1"
                    android:padding="@dimen/scale_10dp"
                    android:singleLine="true"
                    android:text="@string/label_select_location"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/toolbar_title_text_size"
                    android:transitionName="@string/transition_location" />
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <com.cheep.custom_view.CFTextViewRegular
            android:id="@+id/text_auto_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scale_35dp"
            android:background="@color/blue_varient_4"
            android:drawableRight="@drawable/icon_gps"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/scale_22dp"
            android:paddingRight="@dimen/scale_15dp"
            android:text="@string/label_auto_select_location"
            android:textColor="@color/splash_gradient_end"
            android:textSize="@dimen/text_size_13sp" />

        <com.cheep.custom_view.CFEditTextRegular
            android:id="@+id/edit_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_search_marker"
            android:drawablePadding="@dimen/scale_10dp"
            android:gravity="left|center_vertical"
            android:hint="@string/hint_start_typing_location"
            android:lines="1"
            android:paddingBottom="@dimen/scale_15dp"
            android:paddingLeft="@dimen/scale_22dp"
            android:paddingRight="@dimen/scale_15dp"
            android:paddingTop="@dimen/scale_15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_varient_1"
            android:textSize="@dimen/text_size_13sp" />

        <include
            android:id="@+id/common_recycler_view_no_swipe"
            layout="@layout/common_recycler_view_no_swipe" />
    </LinearLayout>
</layout>