<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_translucent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarWhite">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.cheep.custom_view.CFTextViewSemiBold
                    android:id="@+id/text_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:drawablePadding="@dimen/scale_5dp"
                    android:drawableRight="@drawable/icon_drop_down_blue"
                    android:gravity="center"
                    android:lines="1"
                    android:padding="@dimen/scale_10dp"
                    android:singleLine="true"
                    android:text="@string/dummy_location"
                    android:textAllCaps="false"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/toolbar_title_text_size" />
            </android.support.v7.widget.Toolbar>

            <com.cheep.custom_view.CFEditTextRegular
                android:id="@+id/edit_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@color/white"
                android:drawableLeft="@drawable/icon_search_bar"
                android:drawablePadding="@dimen/scale_10dp"
                android:ellipsize="end"
                android:gravity="left"
                android:hint="@string/hint_search_placeholder"
                android:lines="1"
                android:paddingBottom="@dimen/scale_15dp"
                android:paddingLeft="@dimen/scale_22dp"
                android:paddingRight="@dimen/scale_15dp"
                android:maxLines="1"
                android:paddingTop="@dimen/scale_15dp"
                android:singleLine="true"
                android:textColor="@color/grey_dark_color"
                android:textColorHint="@color/grey_varient_1"
                android:textSize="@dimen/text_size_14sp"
                android:transitionName="@string/transition_text_search"
                tools:ignore="UnusedAttribute" />

        </android.support.design.widget.AppBarLayout>

        <include
            android:id="@+id/common_recycler_view_no_swipe"
            layout="@layout/common_recycler_view_no_swipe" />

    </LinearLayout>
</layout>